# droneserver

./: .env.example  AGENTS.md  CHATGPT_SETUP.md  DEPLOYMENT_GUIDE.md  FLIGHT_LOGS.md  FLIGHT_MODES.md  IMPLEMENTATION_V1.1.md  LOG_COLORS.md  MAVSDK_METHODS.md  MCP_TOOLS_MAVSDK.md  QUICK_START.md  README.md  RESTART_INSTRUCTIONS.md  ROADMAP_V1.1.md  SERVICE_SETUP.md  STATUS.md  TESTING_COMPREHENSIVE.md  TESTING_GRANULAR.md  TESTING_GUIDE.md  TESTING_INDIVIDUAL.md  TESTING_QUICK.md  TESTING_REFERENCE.md  V1.1_RELEASE_SUMMARY.md  add_comprehensive_logging.py  add_logging.py  install_services.sh  mavlinkmcp.service  ngrok.service  pyproject.toml
src/server/: autopilot_adapter.py  droneserver.py  droneserver_http.py  mavlinkmcp.py  mavlinkmcp_http.py
src/server/perception/: app.py  image_store.py
src/server/perception/camera/: airsim_source.py  base.py  mock_source.py  registry.py
src/server/perception/vision/: claude_vision.py  yolo.py
tests/: README.md  __init__.py  conftest.py  test_basic_flight.py  test_emergency_safety.py  test_mission.py  test_navigation.py  test_parameters.py  test_telemetry.py
